--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="js/scripts.js"></script>
 
-<body onresize="changeBackgroundColour()">
+<body onresize="changeBackgroundColor()">
 	<table id="score">
 		<tr class="row">
 			<td class="cell heading">Subject</td>
@@ -11,8 +11,8 @@
 			<td class="cell text">Maths</td>
 			<td id="grade" class="cell number">100%</td>
 			<td>
-				<button onclick="deceaseValue">Decrease</button>
-				<button>Increase</button>
+				<button onclick="decreaseValue()">Decrease</button>
+				<button onclick="increaseValue()">Increase</button>
 			</td>
 		</tr>
 	</table>
